--- a/contact.html
+++ b/contact.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact Me!</title>
+    <link rel="stylesheet" href="global.css">    
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="contact.css">
   </head>
   <body>
       <nav>
@@ -15,7 +19,7 @@
           </ul>
       </nav>
         <main>
-  <h1>Use this form to contact me</h1>
+  <h1>contact me</h1>
   <form 
   action="http://formspree.io/aerelioyanadel@gmail.com"
   method="POST"
