--- a/index.html
+++ b/index.html
@@ -5,43 +5,43 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>All about me!</title>
+    <link href="https://fonts.googleapis.com/css?family=Josefin+Sans&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="global.css">    
+    <link rel="stylesheet" href="nav.css">
+    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="contact.css">
 </head>
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html" class="current-page">Home</a></li>
             <li><a href="contact.html" class="current_page">Contact</a></li>
         </ul>
     </nav>
         <main>
-        <h1>My name is Eric Oyanadel</h1>
+        <h1>eric oyanadel</h1>
             <img id="profile-pic" src="me.jpg" alt="me"/>
-        <p>I am learning at 
-            <a href="https://wyncode.co" target="_blank"> 
-            Wyncode Academy
-            </a>
-        </p>
-        <div>
-            <p>Some Languages that I am currently learning</p>
-            <ul>
-                <li>
-                    <h3>Ruby</h3>
-                    <img src="ruby.jpg" alt="ruby"/>
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <h3>JavaScript</h3>
-                    <img src="js.jpg" alt="js">
-                </li>
-            </ul>
-            <ul>
-                <li>
-                    <h3>Python</h3>
-                    <img src="python.jpg" alt="python">
-                </li>
-            </ul>
-        </div>
+                <p>I am learning at 
+            <a href="https://wyncode.co" target="_blank"> Wyncode Academy</a>
+                </p>
+            <div>
+                <p>Some Languages that I am currently learning</p>
+                <ul id="language-list">
+                    <li>
+                        <h3>Ruby</h3>
+                        <img src="ruby.jpg" alt="ruby"/>
+                    </li>
+                    <li>
+                        <h3>JavaScript</h3>
+                        <img src="js.jpg" alt="js">
+                    </li>
+                    <li>
+                        <h3>Python</h3>
+                        <img src="python.jpg" alt="python">
+                    </li>
+                </ul>
+            </div>
         </main>
-</body>
-</html>
+    </body>
+</html>                                 
+
