--- a/contact.html
+++ b/contact.html
@@ -5,14 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Contact Me!</title>
-    <link rel="stylesheet" href="global.css">    
-    <link rel="stylesheet" href="nav.css">
-    <link rel="stylesheet" href="index.css">
-    <link rel="stylesheet" href="contact.css">
+    <link rel="stylesheet" href="css/global.css">    
+    <link rel="stylesheet" href="css/nav.css">
+    <link rel="stylesheet" href="css/index.css">
+    <link rel="stylesheet" href="css/contact.css">
   </head>
   <body>
       <nav>
-          
           <ul>
               <li><a href="index.html">Home</a></li>
               <li><a href="contact.html" class="current_page">Contact</a></li>
